force-app/main/default/objects/JDE_Prop_Ln_Item__c/JDE_Prop_Ln_Item__c.object-meta.xml
<CustomObject>
    <label>JDE Prop Ln Item</label>
    <nameField>
        <label>Actual Line Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JDE Prop Ln Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>