force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Bill_To_Proposal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>