force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Concatenate_Co_Doc_Nbr_Ln__c.field-meta.xml
<CustomField>
    <fullName>Concatenate_Co_Doc_Nbr_Ln__c</fullName>
    <externalId>true</externalId>
    <label>Concatenate Co Doc Nbr Ln</label>
    <length>23</length>
    <type>Text</type>
</CustomField>