force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Extended_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Line_Amount__c</fullName>
    <label>Extended Line Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>