force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Freight_Code__c.field-meta.xml
<CustomField>
    <fullName>Freight_Code__c</fullName>
    <label>Freight Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>