force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Item_Short__c.field-meta.xml
<CustomField>
    <fullName>Item_Short__c</fullName>
    <label>Item Short</label>
    <length>25</length>
    <type>Text</type>
</CustomField>