force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Last_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Description__c</fullName>
    <label>Last Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>