force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Next_Description__c.field-meta.xml
<CustomField>
    <fullName>Next_Description__c</fullName>
    <label>Next Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>