force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Next_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Status__c</fullName>
    <label>Next Status</label>
    <length>3</length>
    <type>Text</type>
</CustomField>