force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <label>Proposal Date</label>
    <type>Date</type>
</CustomField>