force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <label>Proposal Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>