force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Order_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Type__c</fullName>
    <label>Proposal Line Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>