force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Original_Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Promise_Date__c</fullName>
    <label>Original Allocation Date</label>
    <type>Date</type>
</CustomField>