force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Package_Options__c.field-meta.xml
<CustomField>
    <fullName>Package_Options__c</fullName>
    <label>Package Options</label>
    <length>2055</length>
    <type>LongTextArea</type>
</CustomField>