force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>3</length>
    <type>Text</type>
</CustomField>