force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Promise_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Promise_Delivery_Date__c</fullName>
    <label>Promise Delivery Date</label>
    <type>Date</type>
</CustomField>