force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>JDE_Prop__c</referenceTo>
    <relationshipName>Proposal_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>