force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Scheduled_Pick_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Pick_Date__c</fullName>
    <label>Scheduled Pick Date</label>
    <type>Date</type>
</CustomField>