force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Ship_To_Proposal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>