force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/SRP_Code_2__c.field-meta.xml
<CustomField>
    <fullName>SRP_Code_2__c</fullName>
    <label>SRP Code 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>