force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/SRP_Code_2_Description__c.field-meta.xml
<CustomField>
    <fullName>SRP_Code_2_Description__c</fullName>
    <label>SRP Code 2 Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>