force-app/main/default/objects/JDE_Prop_Ln_Item__c/fields/Truck_Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Truck_Driver_Name__c</fullName>
    <label>Truck Driver Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>